<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp"
    android:layout_margin="32dp"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/top"
    android:alpha="0.80"
    android:background="@drawable/text_view_border">

        <TextView
            android:id="@+id/titleID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            android:text="@string/product_update_title"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/updateProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/PRODUCT_NAME"
            android:inputType="text"/>

    <EditText
        android:id="@+id/updateProductType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/TYPE"
        android:inputType="text"/>

    <EditText
        android:id="@+id/updateProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/PRICE"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/updateProductIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/INGREDIENTS"
        android:inputType="text" />

    <EditText
        android:id="@+id/updateProductRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/RATING"
        android:inputType="numberDecimal" />

        <Button
            android:id="@+id/updateProductBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_colour"
            android:text="@string/update_product_to_db"
            android:textColor="@color/colorPrimary" />


</LinearLayout>