<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/cardview_shadow_start_color"
    android:weightSum="100"
    android:padding="5dp">

    <TextView
        android:id="@+id/AdaperViewProductID"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="22sp"
        android:text="@string/PRODUCT_ID"
        android:textStyle="bold"
        android:layout_weight="66.6"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3">

        <TextView
            android:id="@+id/AdaperViewProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@color/TigerOrange"
            android:text="@string/PRODUCT_NAME"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AdaperViewProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/tableRowEven"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/PRICE"/>

        <TextView
            android:id="@+id/AdaperViewProductType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/tableRowOdd"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/TYPE"/>
    </LinearLayout>

</LinearLayout>